# pokerhand

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  hand.c  hand.h  macro.c  macro.h  main.c  methods.c  methods.h
